# artvaluator

./: .env  .gitignore  Dockerfile  README.md  app.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt
.streamlit/: config.toml
app/: cli_main.py  ui.py
artvaluator/: .env  .gitignore  Dockerfile  inference.py  openenv.yaml  requirements.txt
artvaluator/artvaluator/: README.md
artvaluator/artvaluator/.agents/skills/hf-cli/: SKILL.md
artvaluator/artvaluator/app/: main.py  ui.py
artvaluator/artvaluator/utils/: validation.py
artvaluator/data/: sample_input.json
artvaluator/env/: art_env.py  grader.py
artvaluator/models/: image_model.py  text_model.py
artvaluator/utils/: cache.py  pricing.py
data/: sample_input.json
env/: art_env.py  grader.py
models/: image_model.py  text_model.py
server/: app.py  main.py
utils/: cache.py  pricing.py  validation.py
